--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "anymatch": "^3.1.2",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.2.0",
+    "body-parser": "^1.20.0",
     "boxen": "^5.1.2",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
@@ -35,6 +36,7 @@
     "emoji-regex": "^8.0.0",
     "end-of-stream": "^1.4.4",
     "escape-goat": "^2.1.1",
+    "express": "^4.17.3",
     "fill-range": "^7.0.1",
     "get-stream": "^4.1.0",
     "glob-parent": "^5.1.2",
