--- a/package.json
+++ b/package.json
@@ -112,10 +112,13 @@
     "yallist": "^4.0.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/**/*.test.js --exit",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
