--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nodejs",
   "version": "1.0.0",
-  "description": "To make it easy for you to get started with GitLab, here's a list of recommended next steps.",
   "main": "index.js",
   "dependencies": {
     "abbrev": "^1.1.1",
@@ -32,6 +31,7 @@
     "deep-extend": "^0.6.0",
     "defer-to-connect": "^1.1.3",
     "dot-prop": "^5.3.0",
+    "dotenv": "^16.0.0",
     "duplexer3": "^0.1.4",
     "emoji-regex": "^8.0.0",
     "end-of-stream": "^1.4.4",
@@ -72,6 +72,7 @@
     "minimatch": "^3.1.2",
     "minimist": "^1.2.6",
     "ms": "^2.1.3",
+    "mysql": "^2.18.1",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "normalize-url": "^4.5.1",
@@ -124,13 +125,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/Redralis/programmeren-4-nodejs-server.git"
+    "url": "git+https://github.com/Redralis/Share-a-Meal-API.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://gitlab.com/Redralis/programmeren-4-nodejs-server/issues"
+    "url": "https://github.com/Redralis/Share-a-Meal-API/issues"
   },
-  "homepage": "https://gitlab.com/Redralis/programmeren-4-nodejs-server#readme"
+  "homepage": "https://github.com/Redralis/Share-a-Meal-API/blob/main/README.md"
 }
