Edited main.yml so that tests have to pass to be deployed.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,38 @@
 name: Deploy to Heroku
 
 on:
-  push:
-    branches:
-      - main
+    push:
+        branches:
+            - main
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    environment:
-      name: Heroku # naam van mijn environment op GitHub
-    steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{secrets.API_KEY_HEROKU}}
-          heroku_app_name: shareameal-api-lucas
-          heroku_email: l.dekleijn2@student.avans.nl
+    integrationtests:
+        runs-on: ubuntu-latest
+        steps:
+            # Checkout the Repo
+            - uses: actions/checkout@v2
+
+            # Install Node 16
+            - name: Setup Node
+              uses: actions/setup-node@v1
+              with:
+                  node-version: 16
+
+            # Install dependencies
+            - run: npm install
+
+            # Run tests
+            - run: npm test
+
+    deploy:
+        needs: integrationtests
+        runs-on: ubuntu-latest
+        environment:
+            name: Heroku # naam van mijn environment op GitHub
+        steps:
+            - uses: actions/checkout@v2
+            - uses: akhileshns/heroku-deploy@v3.12.12
+              with:
+                  heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+                  heroku_app_name: shareameal-prog4
+                  heroku_email: l.dekleijn2@student.avans.nl
