--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,6 @@ jobs:
             - uses: actions/checkout@v2
             - uses: akhileshns/heroku-deploy@v3.12.12
               with:
-                  heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+                  heroku_api_key: ${{secrets.API_KEY_HEROKU}}
                   heroku_app_name: shareameal-api-lucas
                   heroku_email: l.dekleijn2@student.avans.nl
