--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "minimist": "^1.2.6",
     "ms": "^2.1.3",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "normalize-url": "^4.5.1",
