--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to Heroku
 on:
     push:
         branches:
-            - main
+            - development
 
 jobs:
     integrationtests:
